<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/traffic_tab"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="16dp"
              android:paddingRight="16dp">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
        <LinearLayout
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/last_update_time"
                    android:textSize="16dp"
                    android:textColor="@color/sub_black"
                    android:gravity="right|bottom"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            <Button
                    android:id="@+id/update"
                    android:text="@string/update"
                    android:background="@color/main_green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="20dp"
                    android:textColor="@color/main_black"
                    style="@style/SimpleButton"/>

        </LinearLayout>
        <TextView
                android:id="@+id/message"
                android:textColor="@color/main_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"/>

        <TextView
                android:id="@+id/three_before_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_before"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textSize="20dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:id="@+id/three_before_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </LinearLayout>



        <TextView
                android:id="@+id/two_before_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_before"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textSize="20dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:id="@+id/two_before_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </LinearLayout>


        <TextView
                android:id="@+id/one_before_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one_before"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textSize="20dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:id="@+id/one_before_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </LinearLayout>

        <TextView
                android:id="@+id/ride_bus_stop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:id="@+id/ride_bus_stop_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>